# DimaTech_test

./: .env  .gitignore  README.md  alembic.ini  compose.yml  dockerfile  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_03_04_16_11_init.py  2025_03_08_02_37_changed_payments.py
src/: main.py
src/api/v1/: auth.py  invoice.py  payment.py  user.py  webhook.py
src/core/: app_logging.py  oauth.py  pass_hash.py  settings.py  webhook_checking.py
src/db/: base.py  models.py  repo.py  session.py
src/db/repo/: invoice.py  payment.py
src/middlewares/: auth.py
src/schemas/: auth.py  invoices_schemas.py  payments_schemas.py  user_schemas.py  webhook_schema.py
src/services/: auth.py  invoice.py  payments.py  user.py  webhook.py
